[gd_scene load_steps=6 format=3 uid="uid://jwq24w874wql"]

[ext_resource type="Texture2D" uid="uid://cqicr86062t3v" path="res://Assets/Sprites/projectile-egg.png" id="1_lr5bu"]
[ext_resource type="Script" path="res://Game/Projectiles/Egg.gd" id="1_yiytc"]
[ext_resource type="AudioStream" uid="uid://dkc2pwvxw2cj7" path="res://Assets/SFX/bloop.mp3" id="3_gvg5o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6r1gb"]
radius = 13.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wgf6e"]
radius = 164.247

[node name="Egg" type="RigidBody2D"]
script = ExtResource("1_yiytc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_lr5bu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6r1gb")

[node name="BlastArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastArea"]
shape = SubResource("CircleShape2D_wgf6e")

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gvg5o")

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
